// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Col className 1`] = `
<col
  className="uu5-bricks-table-col my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 1`] = `
<col
  className="color-schema-default uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 2`] = `
<col
  className="color-schema-red uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 3`] = `
<col
  className="color-schema-red uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 4`] = `
<col
  className="color-schema-red-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 5`] = `
<col
  className="color-schema-red-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 6`] = `
<col
  className="color-schema-green uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 7`] = `
<col
  className="color-schema-green uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 8`] = `
<col
  className="color-schema-green-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 9`] = `
<col
  className="color-schema-green-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 10`] = `
<col
  className="color-schema-yellow uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 11`] = `
<col
  className="color-schema-yellow uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 12`] = `
<col
  className="color-schema-yellow-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 13`] = `
<col
  className="color-schema-yellow-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 14`] = `
<col
  className="color-schema-purple uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 15`] = `
<col
  className="color-schema-purple uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 16`] = `
<col
  className="color-schema-purple-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 17`] = `
<col
  className="color-schema-purple-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 18`] = `
<col
  className="color-schema-brown uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 19`] = `
<col
  className="color-schema-brown uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 20`] = `
<col
  className="color-schema-brown-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 21`] = `
<col
  className="color-schema-brown-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 22`] = `
<col
  className="color-schema-orange uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 23`] = `
<col
  className="color-schema-orange uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 24`] = `
<col
  className="color-schema-orange-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 25`] = `
<col
  className="color-schema-orange-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 26`] = `
<col
  className="color-schema-cyan uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 27`] = `
<col
  className="color-schema-cyan uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 28`] = `
<col
  className="color-schema-cyan-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 29`] = `
<col
  className="color-schema-cyan-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 30`] = `
<col
  className="color-schema-grey uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 31`] = `
<col
  className="color-schema-grey uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 32`] = `
<col
  className="color-schema-grey-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 33`] = `
<col
  className="color-schema-grey-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 34`] = `
<col
  className="color-schema-pink uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 35`] = `
<col
  className="color-schema-pink uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 36`] = `
<col
  className="color-schema-pink-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 37`] = `
<col
  className="color-schema-pink-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema 38`] = `
<col
  className="color-schema-pink uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled 4`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col default props 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled 4`] = `
<col
  className="uu5-bricks-table-col uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col docKit examples UU5.Bricks.Table.Col should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Table
    allowTags={Array []}
    bordered={false}
    className={null}
    colorSchema={null}
    condensed={false}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header="Table"
    hidden={false}
    hover={false}
    id="uuID"
    ignoreInnerHTML={false}
    key="uuID"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    responsive={false}
    selected={false}
    striped={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <table-col-group
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID02"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <TableCol
        className={null}
        colorSchema="blue"
        controlled={true}
        disabled={false}
        hidden={false}
        id="uuID03"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        span={1}
        style={null}
        tooltip={null}
      />
      <TableCol
        className={null}
        colorSchema="red"
        controlled={true}
        disabled={false}
        hidden={false}
        id="uuID04"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        span={2}
        style={null}
        tooltip={null}
      />
    </table-col-group>
    <table-thead
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID05"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID06"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Name"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID07"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID08"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Promotion prospects"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID09"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-thead>
    <table-tbody
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID010"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID011"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rimmer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID012"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="2nd class technician"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID013"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="comical"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID014"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tbody>
  </Table>
</div>
`;

exports[`UU5.Bricks.Table.Col hidden 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden 4`] = `
<col
  className="uu5-bricks-table-col uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col id 1`] = `
<col
  className="uu5-bricks-table-col"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col mainAttrs 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col name 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 4`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 5`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 6`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 7`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 8`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 9`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 10`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 11`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 12`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 13`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 14`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 15`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 16`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 17`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 18`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Table.Col nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Table.Col noIndex 1`] = `
<col
  className="uu5-bricks-table-col uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col noIndex 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col noIndex 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col noIndex 4`] = `
<col
  className="uu5-bricks-table-col uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender 4`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected 4`] = `
<col
  className="uu5-bricks-table-col uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={1}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={2}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={2}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span 4`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={1}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style 2`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style 4`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col tooltip 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
